--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/ng-multiselect-dropdown/themes/ng-multiselect-dropdown.theme.scss"
-              
+              "node_modules/ng-multiselect-dropdown/themes/ng-multiselect-dropdown.theme.scss",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css"
             ],
             "scripts": []
           },
